--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -7,6 +7,7 @@ output:
 
 # Useful Links/Downloads
 
+- [OpenIntro](https://www.openintro.org/stat/textbook.php?stat_book=os) is the textbook for the class that you can [download](https://www.openintro.org/download.php?file=os3&referrer=/stat/textbook.php) for FREE. In addition to the textbook, their website has additional lecture slides, video lectures, and labs for practicing R.
 - [Rstudio](https://www.rstudio.com/resources/cheatsheets/) has made some very useful cheat sheets that you can reference while you are programming in R. I've placed some of the more useful ones for this class here:
     - [Base R](./cheat_sheets/base-r.pdf)
     - [Data Wrangling](./cheat_sheets/data-transformation-cheatsheet.pdf)
